AB#193905: Paddings are needed for correct text display inside pdp on mobile - tablet, added to correct place to not override other default links

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/pdp/pdp-hero/_pdp-hero.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/pdp/pdp-hero/_pdp-hero.scss
@@ -728,6 +728,11 @@
     color: clr(secondary);
     height: 6rem;
     width: 100%;
+    padding: 0 1.2rem;
+
+    @include medium {
+      padding: 0 3.4rem;
+    }
   }
 }
 
